<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/top_image"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="Positive\nComputing\nHUB"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightGray" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="2dp"
            app:cardCornerRadius="5dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/applications"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="16dp"
                            android:onClick="onViewMindscopeClick"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/mindscope_icon_resized" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="6dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/mindscope_title"
                                    android:textColor="#000000"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/mindscope_subtitle"
                                    android:textSize="12sp" />

                            </LinearLayout>


                        </LinearLayout>

                        <Button
                            android:id="@+id/getOpenMainMindScopeBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/round_corner"
                            android:includeFontPadding="true"
                            android:onClick="onGetOpenMindscopeClick"
                            android:text="@string/get"
                            android:textColor="@color/mocaPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="16dp"
                            android:onClick="onViewFocusAidClick"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="46dp"
                                android:layout_height="46dp"
                                android:layout_margin="7dp"

                                android:src="@drawable/focus_aid_icon" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="6dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/focusaid_title"
                                    android:textColor="#000000"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/focusaid_subtitle"
                                    android:textSize="12sp" />

                            </LinearLayout>


                        </LinearLayout>

                        <Button
                            android:id="@+id/getOpenMainFocusAidBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/round_corner"
                            android:includeFontPadding="true"
                            android:onClick="onGetOpenFocusAidClick"
                            android:text="@string/get"
                            android:textColor="@color/mocaPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="16dp"
                            android:onClick="onViewGoldenTimeClick"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="5dp"
                                android:src="@drawable/goldentime_icon" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="6dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/goldentime_title"
                                    android:textColor="#000000"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/goldentime_subtitle"
                                    android:textSize="12sp" />

                            </LinearLayout>


                        </LinearLayout>

                        <Button
                            android:id="@+id/getOpenMainGoldenTimeBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/round_corner"
                            android:includeFontPadding="true"
                            android:onClick="onGetOpenGoldenTimeClick"
                            android:text="@string/get"
                            android:textColor="@color/mocaPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="16dp"
                            android:onClick="onViewBeActiveClick"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="46dp"
                                android:layout_height="46dp"
                                android:layout_margin="7dp"
                                android:src="@drawable/be_active_logo" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="6dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/beactive_title"
                                    android:textColor="#000000"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/beactive_subtitle"
                                    android:textSize="12sp" />

                            </LinearLayout>


                        </LinearLayout>

                        <Button
                            android:id="@+id/getOpenMainBeActiveBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/round_corner"
                            android:includeFontPadding="true"
                            android:onClick="onGetOpenBeActiveClick"
                            android:text="@string/get"
                            android:textColor="@color/mocaPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="16dp"
                            android:onClick="onViewMyButlerClick"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="47dp"
                                android:layout_height="47dp"
                                android:layout_margin="6dp"
                                android:src="@drawable/mybutler_logo" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="6dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/mybutler_title"
                                    android:textColor="#000000"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/mybutler_subtitle"
                                    android:textSize="12sp" />

                            </LinearLayout>


                        </LinearLayout>

                        <Button
                            android:id="@+id/getOpenMainMyButlerBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/round_corner"
                            android:includeFontPadding="true"
                            android:onClick="onGetOpenMyButlerClick"
                            android:text="@string/get"
                            android:textColor="@color/mocaPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="16dp"
                            android:onClick="onViewRoutinAidClick"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@drawable/routinaid_icon" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="6dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/routineaid_title"
                                    android:textColor="#000000"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/routineaid_subtitle"
                                    android:textSize="12sp" />

                            </LinearLayout>


                        </LinearLayout>

                        <Button
                            android:id="@+id/getOpenMainRoutinAidBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/round_corner"
                            android:includeFontPadding="true"
                            android:onClick="onGetOpenRoutinAidClick"
                            android:text="@string/get"
                            android:textColor="@color/mocaPrimary" />

                    </RelativeLayout>


                </LinearLayout>
            </ScrollView>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</LinearLayout>